# numdiff

./: CHANGELOG.md  Cargo.toml  README.md
src/: automatic_differentiation.rs  central_difference.rs  constants.rs  forward_difference.rs  lib.rs  test_utils.rs
src/automatic_differentiation/: derivative2.rs  directional_derivative.rs  dual.rs  dual_vector.rs  gradient.rs  jacobian.rs  partial2.rs
src/automatic_differentiation/derivative/: scalar_valued.rs  scalar_valued_old.rs  vector_valued.rs
src/automatic_differentiation/derivative2/: scalar_valued.rs  vector_valued.rs
src/automatic_differentiation/dual/: dual.rs  dual_vector.rs  hyper_dual.rs  hyper_dual_vector.rs
src/automatic_differentiation/hessian/: scalar_valued.rs  vector_valued.rs
src/automatic_differentiation/partial2/: scalar_valued.rs  vector_valued.rs
src/automatic_differentiation/partial_derivative/: scalar_valued.rs  vector_valued.rs
src/central_difference/: directional_derivative.rs  gradient.rs  jacobian.rs
src/central_difference/derivative/: scalar_valued.rs  vector_valued.rs
src/central_difference/hessian/: scalar_valued.rs  vector_valued.rs
src/central_difference/partial_derivative/: scalar_valued.rs  vector_valued.rs
src/forward_difference/: derivative.rs  directional_derivative.rs  gradient.rs  jacobian.rs  sderivative.rs  vderivative.rs
src/forward_difference/derivative/: scalar_valued.rs  vector_valued.rs
src/forward_difference/hessian/: scalar_valued.rs  vector_valued.rs
src/forward_difference/partial_derivative/: scalar_valued.rs  vector_valued.rs
