[package]
name = "numdiff"
version = "0.2.1"
authors = ["Tamas Kis"]
edition = "2024"
description = "Numerical differentiation via forward-mode automatic differentiation and finite difference approximations."
documentation = "https://docs.rs/numdiff"
repository = "https://github.com/tamaskis/numdiff"
license = "MIT OR Apache-2.0"

exclude = [".gitignore", ".github/", ".vscode/", "Cargo.lock", "book/"]

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "src/docs-header.html" ]
features = ["trig"]

[dependencies]
linalg-traits = "0.12.1"
num-traits = "0.2.19"
once_cell = "1.21.3"
trig = { version = "0.2.1", optional = true }

[dev-dependencies]
faer = "0.22.6"
linalg-traits = { version = "0.12.1", features = ["nalgebra", "ndarray", "faer", "faer-traits"] }
nalgebra = "0.34.0"
ndarray = "0.16.1"
numtest = "0.3.1"