[package]
name = "numdiff"
version = "0.3.1"
authors = ["Tamas Kis"]
edition = "2024"
description = "Numerical differentiation via forward-mode automatic differentiation and finite difference approximations."
documentation = "https://docs.rs/numdiff"
repository = "https://github.com/tamaskis/numdiff"
license = "MIT OR Apache-2.0"

exclude = [".gitignore", ".github/", ".vscode/", "Cargo.lock", "book/"]

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "src/docs-header.html" ]
features = ["trig"]

[dependencies]
linalg-traits = "0.13.0"
num-traits = "0.2.19"
trig = { version = "0.3.0", optional = true }

[dev-dependencies]
faer = "0.23.2"
linalg-traits = { version = "0.13.0", features = ["nalgebra", "ndarray", "faer", "faer-traits"] }
nalgebra = "0.34.1"
ndarray = "0.17.1"
numtest = "0.3.1"